internal/gatewayapi/testdata/tcproute-securitypolicy-conflicting-listeners.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-tcp
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tcp-1
      port: 8088
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      name: tcp-2
      port: 8088
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Only one TCP listener is allowed in a given port
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: Listener is invalid, see other Conditions for details.
        reason: Invalid
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp-2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
infraIR:
  envoy-gateway/gateway-tcp:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-tcp/tcp-1
        ports:
        - containerPort: 8088
          name: tcp-8088
          protocol: TCP
          servicePort: 8088
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-tcp
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-tcp
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-tcpr-conflicting-listeners
    namespace: default
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcpr-app
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: TCPRoute
  metadata:
    name: tcpr-app
    namespace: default
  spec:
    parentRefs:
    - name: gateway-tcp
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-tcp
        namespace: envoy-gateway
xdsIR:
  envoy-gateway/gateway-tcp:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-tcp-093cb215
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-tcp
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-tcp-093cb215
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-tcp
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8088
      metadata:
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: tcp-1
      name: envoy-gateway/gateway-tcp/tcp-1
      port: 8088
      routes:
      - destination:
          metadata:
            kind: TCPRoute
            name: tcpr-app
            namespace: default
          name: tcproute/default/tcpr-app/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8163
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8163"
            name: tcproute/default/tcpr-app/rule/-1/backend/0
            protocol: TCP
            weight: 1
        metadata:
          kind: TCPRoute
          name: tcpr-app
          namespace: default
        name: tcproute/default/tcpr-app
